add release preface

--- a/00-Preface.asciidoc
+++ b/00-Preface.asciidoc
@@ -5,3 +5,8 @@ add chapter 1 content
 ChapterTwoModification
 
 chapter 5
+
+Adding for cherry
+/******************************************************
+NOT CHERRY PICK
+*******************************************************
