--- a/00-Preface.asciidoc
+++ b/00-Preface.asciidoc
@@ -6,7 +6,7 @@ ChapterTwoModification
 going to revert this
 chapter 5
 untagged
-
+changing from terminal
 Adding for cherry
 *******************************************************
 NOT CHERRY PICK
